style.css
/* ... */
body {
  background-color: var(--hero-background);
  height: 100%;
  position: relative;
}

/* Fonts */

#career p::first-letter, #beginning p::first-letter {
  color: #000000;
  margin-left: 2em;
}

h1 {
  font-family: var(--title-font);
  font-weight: 200;
  font-size: 10vw;  
  line-height: 1.25;
}

p {
  font-size: 30px;
  line-height: 40px;
}

h5 {
  font-size: 3vw;
  font-weight: 400;
}

img {
  object-fit: cover;
}

#navigation {
  top: 0px;
  width: 100%;
  padding: 0 var(--side-padding);
  height: var(--nav-height-L);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  background-color: var(--hero-background);
  z-index: 5;
}

nav {
  width: 100%;
}

.menu {
  display: flex;
  justify-content: space-between;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.menu a {
  text-decoration: none;
  color: var(--white);
  display: block;
  line-height: var(--nav-height-L);
  height: var(--nav-height-L);
  text-align: center;
  width: 100%;
  z-index: 5;
}

.menu a:hover {
  text-decoration: underline;
  background-color: var(--menu-hover-color);
  color: var(--white);
}

.menu a:focus {
  text-decoration: underline;
  background-color: var(--menu-hover-color);
  color: var(--white);
}

#menu-toggle {
  display: none;
}

.menu-button,
.menu-button::before,
.menu-button::after {
  position: absolute;
  display: none;
  background-color: var(--black);
  height: var(--hamburger-line-height);
  width: var(--hamburger-width);
}

.menu-button::before {
  content: "";
  margin-top: calc(var(--hamburger-margin) * -1);
}

.menu-button::after {
  content: "";
  margin-top: var(--hamburger-margin);
}

/* HERO SECTION */

#hero-content, #hero-image-container {
  width: 100%;
  display: flex;
  justify-content: center;
}

#hero-content {
  margin-bottom: 50px;
  padding: 0 var(--side-padding);
}

#hero-image-container {
  position: absolute;
  width: 100%;
  padding-top: 2vw;
  z-index: -1;
}

#hero-image-container #on-stage {
  width: 50%;
  object-fit: cover;
}

#hero-content #title {
  width: 100%;
  z-index: 2;
  text-align: right;
}

#hero-content h1 {
  font-size: 16vw;
  font-family: var(--title-font);
  color: var(--white);
  line-height: 0.9;
  z-index: 2;
}

#hero-description {
  width: 100%;
}

#portrait-subtitle {
  width: 100%;
  display: flex;
  justify-content: end;
  align-items: flex-end;
  margin-top: 10px;
}

#portrait-subtitle #subtitle {
  width: 100%;
  line-height: 2;
}

#portrait-subtitle #subtitle h2 {
  width: 100%;
  font-family: var(--title-font);
  color: var(--white);
  font-size: 3.5vw;
  line-height: 2.8;
  font-weight: 400;
}

#portrait-subtitle #portrait {
  width: 40vw;
  height: 28vw;
}

#portrait img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: 0 30%;
}

#portrait img {
  border: 11px solid var(--white);
}

#menu-items li a:visited {
  color: #FFF9ED;
  text-decoration: none;
}

/* BEGINNING */

#about {
  background-color: var(--beginning-background);
  padding-bottom: 90px;
}

#beginning-violin {
  position: absolute;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

#beginning-violin img {
  width: 80%;
}

#rotatedViolin {
  display: none;
}

#beginning-main-content {
  position: relative;
  padding: var(--side-padding) var(--side-padding) 0 var(--side-padding);
  display: flex;
  justify-items: center;
  align-items: flex-end;
}

#beginning-text {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
}

#beginning-text p {
  width: 70%;
  font-family: var(--font-family);
}

#beginnin-title {
  width: 20%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

#beginnin-title h1 {
  writing-mode: vertical-rl;
  text-orientation: mixed;
}

/* Flex career */

#career {
  background-color: var(--career-background);
  padding: 5% var(--side-padding);
  width: 100%;
  display: flex;
  justify-content: space-between;
}

#portrait-in-white {
  display: none;
  float: right;
  padding: 0 0 5% 5%;
}

#hanna-in-white {
  display: none;
  width: 100%;
  object-fit: contain;
  margin: 5% 0;
}

#career-text-content {
  display: flex;
  width: 80%;
}

.career-title {
  width: 12%;
  position: relative;
}

.career-title h1 {
  transform: rotate(-90deg);
  position: absolute;
  transform-origin: 45% 145%;
  line-height: 1;
}

.career-p1,
.career-p2 {
  width: 50%;
  font-family: var(--font-family);
  font-style: normal;
  font-weight: 400;
  font-size: var(--career-font);
  line-height: 30px;
  color: var(--text-color);
  padding: 0 2%;
  /* padding-right: 9%; */
  border-left: 1px solid var(--text-color);
}

.career-p1 p:first-child,
.career-p2 p:first-child {
  margin-bottom: 40px;
}

.career-p1 p,
.career-p2 p {
  font-size: 23px;
  line-height: 30px;
}

#desktop-hidden-expand-career {
  width: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  visibility: hidden;
  padding: 10px 0;
}

#desktop-hidden-expand-career svg {
  width: 40px;
  height: 40px;
}

.arrowUp {
  transform: scaleY(-1);
}

/* Photo Gallery */
#photos {
  padding: 5% var(--side-padding);
  background: rgb(210, 125, 96);
  background: -moz-linear-gradient(0deg, rgba(210, 125, 96, 1) 0%, rgba(188, 137, 114, 1) 100%);
  background: -webkit-linear-gradient(0deg, rgba(210, 125, 96, 1) 0%, rgba(188, 137, 114, 1) 100%);
  background: linear-gradient(0deg, rgba(210, 125, 96, 1) 0%, rgba(188, 137, 114, 1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d27d60", endColorstr="#bc8972", GradientType=1);
}

#mobile-gallery {
  display: none;
}

#gallery {
  display: flex;
  justify-content: center;
  align-items: center;
}

.coverflow {
  position: relative;
  width: 90vw;
  height: var(--gallery-image-height);
  overflow: hidden;
}
/* ... */

